--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,9 @@ body {
 	font-family: "RobotoRegular", sans-serif;
 	font-size: 16px;
 }
+li{
+	list-style:none;
+}
 .navbar-default {
 	background-color: #a60c41;
 	font-size: x-large;
@@ -95,9 +98,11 @@ a { /* анимация */
 .jumbotron{
 	padding-top: 0;
 	margin-top: -2em;
+	    padding-bottom: 0;
+	    margin-bottom: 0;
 }
 .arka-c{
-	text-align-last: end;
+	/*text-align-last: end;*/
 	    top: 1em;
 }
 .contacts-row{
@@ -111,3 +116,25 @@ a { /* анимация */
 .contacts{
 	bottom: 5em;
 }
+
+
+  .bottom-align-text {
+  	top: 3em;
+   /* position: absolute;
+    bottom: 0;
+    right: 0;*/
+  }
+  .bottom-line{
+  	margin-top: 0;
+  }
+
+  .heading7 { font-weight:700; color:black; margin-bottom:22px;
+      font-size: x-large;
+    text-align: center;}
+  .paddingtop-bottom {  margin-top:50px;}
+ 
+  .footer-ul >li>a{
+  	color:  #909193;
+  	text-decoration: none;
+  	font-size: larger;
+  }
