--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,24 @@
 /* main color red rgba(166,12,65,1);  #a60c41
 */
+.nopadding {
+   padding: 0 !important;
+   margin: 0 !important;
+}
+
+.clear_border{
+  	border: none;
+}
+
+.clear_link{
+color: #a42465;	
+ text-decoration: none;
+}
+.clear_link:hover {
+    color: red;	
+ text-decoration: none;
+}
+
+
 @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700&subset=latin,cyrillic-ext,latin-ext,cyrillic);
 @import url(https://fonts.googleapis.com/css?family=PT+Sans+Narrow&subset=latin,cyrillic,latin-ext,cyrillic-ext);
 /*** reset ***/
@@ -601,4 +620,7 @@ padding: 1px;
 .count_room{
 	    color: rgba(158,20,90,1);
 }
+
+
+
 /*.bx-wrapper, .bx-viewport, .bx-wrapper {height: 250px !important;}*/
