--- a/css/room.css
+++ b/css/room.css
@@ -17,8 +17,8 @@ a.btn-default{
 }
 
 h1.title_room{
-	    font-size: large;
-    font-weight: 700;
+	/*    font-size: large;
+    font-weight: 700;*/
 }
 
 .icon-like {
