--- a/css/main.css
+++ b/css/main.css
@@ -673,7 +673,7 @@ padding: 1px;
 }
 
 .icon-home{
-	    background-image: url("/img/verstka/home.png");
+	    background-image: url("/img/verstka/house.png");
     display: inline-block;
      width: 42px;
     height: 42px;
