--- a/css/main.css
+++ b/css/main.css
@@ -772,7 +772,7 @@ ul.pagination li a.active, .pagination>li>a:focus, .pagination>li>a:hover, .pagi
 /*.bx-wrapper, .bx-viewport, .bx-wrapper {height: 250px !important;}*/
 
 h1.title_room {
-    font-size: large;
+    font-size: larger;
     font-weight: 700;
 }
 
